--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ env_logger = "0.11"
 walkdir = "2.5"
 zip = "0.6"
 zstd = "0.13.3"
+libloading = "0.8"
+chrono = "0.4"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.50"
